--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "docker:up": "docker-compose --env-file ./.env -f './docker/docker-compose.yml' -p nestjs-skill-up up -d --build",
-    "docker:up_win": "docker-compose --env-file ./.env -f ./docker/docker-compose.yml -p nestjs-skill-up up -d --build"
+    "docker:up": "docker compose --env-file ./.env -f './docker/compose.yaml' -p nestjs-skill-up up -d --build",
+    "docker:up_win": "docker-compose --env-file ./.env -f ./docker/compose.yaml -p nestjs-skill-up up -d --build"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
