--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "docker:up": "docker compose --env-file ./.env -f './docker/compose.yaml' -p nestjs-skill-up up -d --build",
     "docker:up_win": "docker-compose --env-file ./.env -f ./docker/compose.yaml -p nestjs-skill-up up -d --build",
+    "docker:down": "docker compose --env-file ./.env -f './docker/compose.yaml' down",
+    "docker:down_win": "docker-compose --env-file ./.env -f ./docker/compose.yaml down",
     "typeorm": "ts-node -r tsconfig-paths/register --files ./node_modules/typeorm/cli.js",
     "migration:create": "npm run typeorm migration:create src/database/migrations/$npm_config_name",
     "migration:create_win": "npm run typeorm migration:create src/database/migrations/%name%",
